restore password detailed errors

--- a/src/main/webapp/i18n/resources-locale_en.json
+++ b/src/main/webapp/i18n/resources-locale_en.json
@@ -1934,6 +1934,11 @@
         "value":"Incorrect old password",
         "description":"change password error: incorrect old password"
     },
+    {
+        "key":"_user-not-exists_",
+        "value":"User doesn't exists",
+        "description":"if user was not found by name, for example, in restore password dialog"
+    },
 
 
     {
