updated deb files for new version

--- a/deb-package/debian/README
+++ b/deb-package/debian/README
@@ -3,4 +3,4 @@ The Debian Package geoknow-generator-ui
 
 Comments regarding the Package
 
- -- Vadim Zaslawski <vadim.zaslawski@ontos.com>  Wed, 21 Aug 2013 15:01:15 +0200
+ -- Alejandra Garcia-Rojas M <alejandra.garciarojas@ontos.com>  Mon, 05 Jan 2015 22:50:23 +0100
